force-app/main/default/objects/Opportunity/fields/Fulfillment_Method__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Method__c</fullName>
    <label>Fulfillment Method</label>
    <description>How the order reaches the retailer. Required when the opportunity is Closed Won (validation rule Fulfillment_Method_Required_When_Won). REQ-001.</description>
    <inlineHelpText>Must be set before the deal is marked Closed Won.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Ship from Warehouse</fullName><default>false</default><label>Ship from Warehouse</label></value>
            <value><fullName>Drop Ship from Vendor</fullName><default>false</default><label>Drop Ship from Vendor</label></value>
            <value><fullName>Store Pickup</fullName><default>false</default><label>Store Pickup</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>