force-app/main/default/objects/Opportunity/fields/Order_Channel__c.field-meta.xml
<CustomField>
    <fullName>Order_Channel__c</fullName>
    <label>Order Channel</label>
    <description>Where the order originated.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Wholesale</fullName><default>false</default><label>Wholesale</label></value>
            <value><fullName>Retail Store</fullName><default>false</default><label>Retail Store</label></value>
            <value><fullName>Online</fullName><default>false</default><label>Online</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>