force-app/main/default/objects/Opportunity/fields/Rush_Order__c.field-meta.xml
<CustomField>
    <fullName>Rush_Order__c</fullName>
    <label>Rush Order</label>
    <description>Customer has asked for expedited fulfillment. Rush orders must close within 14 days.</description>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>